Fix title word wrap for small screens

--- a/source/assets/app.scss
+++ b/source/assets/app.scss
@@ -39,7 +39,7 @@ pre {
   color: rgb(150, 150, 150);
 }
 
-a {
+p a {
   word-break: break-all;
 }
 
